scriptをつかってみた

--- a/nittei.html
+++ b/nittei.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <caption align="top">コマ割り</caption>
-  <table border ="1" width="1000" height="500" align="centor">
+  <table border ="20" bordercolor="black" width="1000" height="500"
+   align="left" bgcolor="white" cellpadding="20">
   <tr>
     <td>月</td>
     <td>火</td>
