--- a/mine.html
+++ b/mine.html
@@ -31,10 +31,12 @@
         <li>裏を返せば、基礎さえできていれば簡単だと言うこと</li>
       </ul>
     </ol>
-    <ul>
-      <li>数列の和についてよく知るための情報を載せる</li>
-      <p><a href="http://manapedia.jp/text/2328/">http://manapedia.jp/text/2328/</a></p>
-    </ul>
+    <p>
+      <dl>
+        <dt><li>数列の和についてよく知るための情報を載せる</li>
+          <dd><p><a href="http://manapedia.jp/text/2328/">http://manapedia.jp/text/2328/</a></p>
+      </dl>
+    </p>
 
     <p>
       <span>コメントを書く</span>
