Improve the README

--- a/mine.html
+++ b/mine.html
@@ -34,18 +34,17 @@
     <p>
       <dl>
         <dt><li>数列の和についてよく知るための情報を載せる</li>
-          <dd><p><a href="http://manapedia.jp/text/2328/">http://manapedia.jp/text/2328/</a></p>
+        <dd><p><a href="http://manapedia.jp/text/2328/">http://manapedia.jp/text/2328/</a></p>
       </dl>
     </p>
-
     <p>
       <span>コメントを書く</span>
       <span><input type = "text"></span>
-    </p>
-
   </body>
 
   <footer>
+    <li>後学期の講義予定</li>
+    <p><a href="file:///C:/Users/Ikedateruyuki/Documents/Ruby_lesson/programming_lesson/nittei.html">講義シート</a></p>
   <address>
     IT;
     <a href="nanigasi@cirkit.com">某へのメッセージ</a>
