--- a/nittei.html
+++ b/nittei.html
@@ -5,44 +5,46 @@
     <title>コマ割り</title>
   </head>
   <body>
-    <caption align="top">コマ割り</caption>
-  <table border ="20" bordercolor="black" width="1000" height="500"
-   align="left" bgcolor="white" cellpadding="20">
-  <tr>
-    <td>月</td>
-    <td>火</td>
-    <td>水</td>
-    <td>木</td>
-    <td>金</td>
-  </tr>
-  <tr>
-    <td>工学のための数理工</td>
-    <td></td>
-    <td>人間と哲学</td>
-    <td>修学基礎</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>離散数学</td>
-    <td></td>
-    <td></td>
-    <td>プロジェクトデザイン１</td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>コンピュータシステム基礎</td>
-    <td></td>
-    <td></td>
-    <td>生涯スポーツ（終）</td>
-  </tr>
-  <tr>
-    <td>プログラミングⅡ</td>
-    <td>線形代数２</td>
-    <td></td>
-    <td>工学のための数理工</td>
-    <td></td>
-  </tr>
+    <caption align="center">コマ割り</caption>
+    <font color="white">
+      <table border ="20" bordercolor="" width="1000" height="500"
+       align="center" bgcolor="green" cellpadding="40">
+      <tr>
+        <td>月</td>
+        <td>火</td>
+        <td>水</td>
+        <td>木</td>
+        <td>金</td>
+      </tr>
+      <tr>
+        <td>工学のための数理工</td>
+        <td></td>
+        <td>人間と哲学</td>
+        <td>修学基礎</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>離散数学</td>
+        <td></td>
+        <td></td>
+        <td>プロジェクトデザイン１</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>コンピュータシステム基礎</td>
+        <td></td>
+        <td></td>
+        <td>生涯スポーツ（終）</td>
+      </tr>
+      <tr>
+        <td>プログラミングⅡ</td>
+        <td>線形代数２</td>
+        <td></td>
+        <td>工学のための数理工</td>
+        <td></td>
+      </tr>
+    </font color>
   </TABLE>
   <br clear="all"><br><br>
 
